# Elcam-V2-Server-FastAPI

./: .gitignore  dashboard_app.py  make_structure.sh  project_description.txt  pyproject.toml  requirements.txt  streamlit_app.py
app/: llama_parse.py  main.py
app/core/: config.py  security.py
app/services/auth/: routers.py  schemas.py
docs/: cluster-configuration.md  dashboard-guide.md  opensearch-overview.md  opensearch-schema.md  streamlit-app-guide.md  system-workflow-explanation.txt
test_documents/: 01_artificial_intelligence_guide.txt  02_ancient_civilizations_history.txt  03_cryptocurrency_blockchain_economics.txt  04_modern_medicine_breakthroughs.txt  05_climate_change_biodiversity.txt  06_renaissance_art_literature.txt  07_olympic_sports_training.txt  08_world_geography_cultures.txt  09_culinary_arts_gastronomy.txt  10_human_psychology_behavior.txt
